--- a/styles.css
+++ b/styles.css
@@ -532,6 +532,8 @@ section {
     width: 100%;
     height: 100%;
     border: none;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .video-note {
